--- a/css/design.css
+++ b/css/design.css
@@ -8,7 +8,17 @@ h1 {
 
 .color {
     background-color: mediumspringgreen;
+    transition-property: all;
+    transition-duration: 0.5s;
 }
+
+.color:hover {
+    background-color: orange;
+    transition-property: all;
+    transition-duration: 2s;
+}
+
+
 
 .kiste {
     height: 200px;
