--- a/css/design.css
+++ b/css/design.css
@@ -9,7 +9,7 @@ h1 {
 .color {
     background-color: mediumspringgreen;
     transition-property: all;
-    transition-duration: 0.5s;
+    transition-duration: 2s;
 }
 
 .color:hover {
@@ -37,4 +37,17 @@ h1 {
 
 .border_bottom {
     border-bottom: 2px #000 dashed;
+}
+
+
+
+
+html,body1 {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
+section {
+    background-color: yellow;
 }
