--- a/css/design.css
+++ b/css/design.css
@@ -51,3 +51,18 @@ html,body1 {
 section {
     background-color: yellow;
 }
+
+.kopf {
+    height: 20vh;
+    background-color: teal;
+}
+
+.content {
+    height: 60vh;
+    background-color: whitesmoke;
+}
+
+.footer {
+    height: 20vh;
+    background-color: darkgray;
+}
