--- a/css/design.css
+++ b/css/design.css
@@ -42,6 +42,18 @@ h1 {
 
 
 
+
+
+
+
+.center {
+    max-width: 60rem;
+    margin: auto auto;
+}
+
+/**************** eo Globals ************/
+
+
 html,body1 {
     height: 100%;
     width: 100%;
@@ -49,13 +61,17 @@ html,body1 {
 }
 
 section {
-    background-color: yellow;
 }
 
 .kopf {
     height: 20vh;
     background-color: teal;
 }
+
+.kopf .logo {
+    height: 10vh;
+}
+
 
 .content {
     height: 60vh;
