--- a/css/design.css
+++ b/css/design.css
@@ -1,3 +1,5 @@
+
+
 body {
     background-color: #cccccc;
 }
@@ -81,4 +83,35 @@ section {
 .footer {
     height: 20vh;
     background-color: darkgray;
+}
+
+
+.mum {
+    height: 60vh;
+    width: 60vh;
+    margin: auto auto;
+    background-color:gainsboro;
+    position: relative;
+}
+
+.kid {
+    height: 10%;
+    width: 10%;
+    background-color: darkmagenta;
+    color: white;
+    position: absolute; 
+    left: 45%;
+    top: 45%;
+    z-index: 5;
+} 
+
+.kid2 {
+    height: 10%;
+    width: 10%;
+    background-color: orange;
+    color: white;
+    position: absolute; 
+    left: 35%;
+    top: 35%; 
+    z-index: 4;
 }
