--- a/css/design.css
+++ b/css/design.css
@@ -1,5 +1,5 @@
 body {
     background-image: url(../img/katze.jpg);
-    background-position: center center;
-    background-size: cover;
+    background-position: auto;
+    background-size: auto;
 }
